# collector

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/: main.py
src/core/: config.py
src/dependencies/: db.py  grpc.py  kafka.py  mqtt.py  redis.py  services.py
src/handlers/: readings.py  status.py  telemetry.py
src/infra/: db.py
src/infra/broker/: routes.py
src/infra/kafka/: consumers.py  routes.py
src/services/: alerts.py  alerts_query.py  buffer.py  readings.py  threshold_cache.py  writer.py
